--- a/templates/therapy/scheme/create.html.twig
+++ b/templates/therapy/scheme/create.html.twig
@@ -16,7 +16,17 @@
 				<cite title="" id="selectedLabels"></cite>
 			</p>
 		</div>
-
+        
+            <div class="row mb-3">
+                <div class="col-sm-8">
+                    <input type="search" class="form-control" id="searchStubsInput" name="searchName" placeholder="Search Therapy Stubs">
+                </div>
+                <div class="col-sm-4">
+                    <button type="button" class="btn btn-primary btn-block" id="searchButton">Search</button>
+                </div>
+            </div>
+            <div class="row mb-3" id="searchResults"  style="max-height: 300px; overflow: auto;" ></div>
+        
 			<div id="contentDisplayedWhenLabelsAreSelected" class="d-none">
 				<div class="row mt-3">
                     <div class="form-check form-switch col-2 m-3">
@@ -170,8 +180,10 @@ $(document).ready(function () {
                     $("#contentDisplayedWhenLabelsAreSelected").removeClass("d-none");
                     $("#contentDisplayedWhenNoLabelsAreSelected").addClass("d-none");
                 } else {
-                    $("#contentDisplayedWhenLabelsAreSelected").addClass("d-none");
-                    $("#contentDisplayedWhenNoLabelsAreSelected").removeClass("d-none");
+                    if(getStubsOrder().length == 0) {    
+                        $("#contentDisplayedWhenLabelsAreSelected").addClass("d-none");
+                        $("#contentDisplayedWhenNoLabelsAreSelected").removeClass("d-none");
+                    }
                 }
 
         });
@@ -231,6 +243,55 @@ function getStubsOrder() {
     return labelOrderArray;
 }
 
+
+function getStubsWithoutLabels() {
+    // Get all tbody elements with the class 'sortable'
+    const tbodyElements = document.querySelectorAll('tbody.sortable');
+
+    const labelOrderArray = []; // Define an array to store JSON representations
+
+    tbodyElements.forEach(tbody => {
+        // Get all rows in the current tbody
+        const rows = Array.from(tbody.children);
+
+        const labelOrderMap = new Map(); // Define a map for each tbody
+
+        rows
+            .filter((_, index) => index !== 0) // Skip the first row
+            .forEach(function(row) {
+                const match = row.id.match(/rowLabel\|(\d+)\|stub\|(\d+)/);
+                if(match) {
+
+                    const labelId = match[1];
+                    const stubId = match[2];
+
+                    // Check if the stub has a label
+                    const labelCol = row.lastElementChild.textContent.trim();
+                    const hasLabels = labelCol !== '';
+
+                    if(!hasLabels) {
+
+                        if (!labelOrderMap.has(labelId)) {
+                            labelOrderMap.set(labelId, []);
+                        }
+
+                        labelOrderMap.get(labelId).push(stubId);
+
+                    }
+
+                }
+            });
+
+        // Convert labelOrderMap to JSON and push it to labelOrderArray
+        if(labelOrderMap.size){
+            labelOrderArray.push([...labelOrderMap]);
+        }
+    });
+
+    // Return the array if needed
+    return labelOrderArray;
+}
+
 // * A function that returns an array of the comments
 const getCurrentComments = () => {
     const textAreas = document.querySelectorAll("textarea[name^='labelID=']");
@@ -262,41 +323,37 @@ const getCheckedCheckboxes = () => {
 const generateDynamicForm = async (selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt) => {
 
     // Get all tbody elements
-    const tbodyElements = document.querySelectorAll("table tbody");
+    const tbodyElements = document.querySelectorAll("table:not(#searchResultsTable) tbody");
 
-    if (selectedLabels.length === 0) {
-        // Clear the content of all tbody elements
+    const currentLanguage = "{{ app.request.locale }}";
+    const url = "{{ path('app_therapy_scheme_generateForm') }}";
+    const requestBody = {
+        selectedLabels,
+        currentLanguage,
+        currentComments,
+        checkedCheckboxes,
+        stubsOrder,
+        suppress,
+        excerpt
+    };
+
+    try {
+        // Send a POST request
+        const response = await axios.post(url, requestBody);
+
+        // Remove all existing tbody elements
         tbodyElements.forEach(tbody => {
             tbody.remove();
         });
-    } else {
-        const currentLanguage = "{{ app.request.locale }}";
-        const url = "{{ path('app_therapy_scheme_generateForm') }}";
-        const requestBody = {
-            selectedLabels,
-            currentLanguage,
-            currentComments,
-            checkedCheckboxes,
-            stubsOrder,
-            suppress,
-            excerpt
-        };
 
-        try {
-            // Send a POST request
-            const response = await axios.post(url, requestBody);
-
-            // Remove all existing tbody elements
-            tbodyElements.forEach(tbody => {
-                tbody.remove();
-            });
-
-            // Append new tbody sections from the response HTML
-            document.querySelector("table").insertAdjacentHTML('beforeend', response.data);
-            sortInit();
-        } catch (error) {
-            console.error("Error:", error);
-        }
+        // Append new tbody sections from the response HTML
+        tbodyElements.forEach(tbody => {
+            tbody.remove();
+        });
+        document.querySelector("table:not(#searchResultsTable)").insertAdjacentHTML('beforeend', response.data);
+        sortInit();
+    } catch (error) {
+        console.error("Error:", error);
     }
 };
 
@@ -352,7 +409,7 @@ function sortTable(tbodyId, order) {
 {# ! Generate the Report #}
 const generateReport = async (selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt, combined = false) => {
 
-    if (selectedLabels.length > 0) {
+    if (selectedLabels.length > 0 || stubsOrder.length) {
         const currentLanguage = "{{ app.request.locale }}";
         const url = "{{ path('app_therapy_scheme_generateReport') }}";
         const requestBody = {
@@ -437,27 +494,130 @@ $(document).ready(function () {
 $(document).ready(function () {
     const resetStubsOrderButton = document.getElementById("resetStubsOrderButton");
     resetStubsOrderButton?.addEventListener("click", async function (event) {
+ 
+        const labelsSelect2 = $("#therapy_scheme_labels").select2("data");
+        const selectedLabels = labelsSelect2.map((item) => item.id);
         const currentComments = getCurrentComments();
         const checkedCheckboxes = getCheckedCheckboxes();
-        const stubsOrder = [];
+        const stubsOrder = getStubsWithoutLabels();
         const suppress = false;
         const excerpt = false;
         await generateDynamicForm(selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
-        
-        initializeSortableForTables()
-        {# * Show/hide content #}
-        if (selectedValues.length > 0) {
-            $("#contentDisplayedWhenLabelsAreSelected").removeClass("d-none");
-            $("#contentDisplayedWhenNoLabelsAreSelected").addClass("d-none");
-        } else {
-            $("#contentDisplayedWhenLabelsAreSelected").addClass("d-none");
-            $("#contentDisplayedWhenNoLabelsAreSelected").removeClass("d-none");
-        }
-        
+        initializeSortableForTables()        
     });
 });
 
 $(document).ready(function () {
+
+    $("#searchStubsInput").keypress(function(event) {
+        if (event.which == 13) { // 13 is the Enter key code
+            event.preventDefault();
+            $("#searchButton").click();
+        }
+    });
+
+    $("#searchButton").click(async function () {
+        const searchText = $("#searchStubsInput").val();
+        if (searchText.trim() === "") {
+            $("#searchResults").empty();
+            return;
+        }
+
+        const url = "{{ path('app_therapy_stubs_scheme_search') }}";
+        try {
+            const response = await axios.post(url, { searchText });
+
+            $("#searchResults").empty();
+            const rows = response.data.map((stub) => {
+
+                const stubId = stub.id;
+                const stubName = $('<div>').text(stub.name).html(); // Escaping HTML
+                const excerpt = $('<div>').text(stub.excerpt.substring(0, 50)).html(); // Escaping HTML
+                const categoryId = stub.categoryId;
+                const labels = stub.labels.map((label) => {
+                    return `<tr data-stub-id="${stubId}" data-label-id="${label.id}" data-category-id="${categoryId}"><td>${stubName}</td><td>${excerpt}</td><td>${$('<div>').text(label.name).html()}</td></tr>`; // Escaping HTML
+                }).join("");
+                if (labels) {
+                    return labels;
+                } else {
+                    return `<tr data-stub-id="${stubId}" data-label-id="" data-category-id="${categoryId}"><td>${stubName}</td><td>${excerpt}</td><td class="no-label">Not Assigned to a LABEL</td></tr>`;
+                }
+            });
+            if(rows.length) {
+                $("#searchResults").html(`<table id="searchResultsTable"><thead><tr><th>Stub Name</th><th>Excerpt</th><th>Label</th></tr></thead><tbody>${rows.join("")}</tbody></table>`);
+            }
+        } catch (error) {
+            console.error("Error fetching search results:", error);
+            // Handle the error (e.g., display an error message to the user)
+        }
+    });
+
+    $("#searchResults").on("click", "tr", async function() {
+        // Get the unique identifier of the clicked row (e.g., stub ID)
+        const stubId = $(this).data("stub-id");
+        const labelId = $(this).data("label-id");
+        const categoryId = $(this).data("category-id");
+
+        // Update selected labels array
+        const labelsSelect2 = $("#therapy_scheme_labels").select2("data");
+        const selectedLabels = labelsSelect2.map((item) => item.id);
+        const selectedLabelIndex = selectedLabels.findIndex(label => label == labelId);
+
+        const currentComments = getCurrentComments();
+        const checkedCheckboxes = getCheckedCheckboxes();
+        const stubsOrder = getStubsOrder();
+        const suppress = false;
+        const excerpt = false;
+        if (labelId.toString() == '') {
+
+            var categoryFound = false;
+            stubsOrder.forEach((category) => {
+                const [cId, stubIds] = category[0];
+                if (cId[0] == categoryId.toString() ) {
+                    stubIds.push( stubId.toString() );
+                    categoryFound = true;
+                }
+            });
+
+            if (!categoryFound) {
+                stubsOrder.push([[categoryId.toString(), [stubId.toString()]]]);
+            }
+
+            $("#contentDisplayedWhenNoLabelsAreSelected").addClass("d-none");
+            $("#contentDisplayedWhenLabelsAreSelected").removeClass("d-none");
+
+            await generateDynamicForm(selectedLabels, currentComments, checkedCheckboxes, stubsOrder, suppress, excerpt);
+            initializeSortableForTables()
+            const checkbox = document.querySelector(`[name='targets|labelID=${categoryId}|stubID=${stubId}']`);
+            checkbox.checked = 'checked';
+
+        } else {
+
+            if (selectedLabelIndex === -1) {
+                selectedLabels.push(labelId.toString());
+                
+                $("#therapy_scheme_labels").val(selectedLabels);
+                $("#therapy_scheme_labels").trigger('change');
+
+                setTimeout(() => {
+                    const checkbox = document.querySelector(`[name='targets|labelID=${categoryId}|stubID=${stubId}']`);                
+                    if (checkbox) {
+                        checkbox.checked = true; // Check the checkbox
+                    }
+                }, 400);
+
+            } else {
+
+                const checkbox = document.querySelector(`[name='targets|labelID=${categoryId}|stubID=${stubId}']`);
+                checkbox.checked = 'checked';
+                                
+            }
+            
+        }
+
+
+    });
+
 	$("#saveAsTemplateButton").click(function () {
         // * Get the comments and set them to the hidden input
         const comments = getCurrentComments();
@@ -547,4 +707,26 @@ $(document).ready(function () {
 			display: none;
 		}
 	</style>
+    <style>
+        #searchResultsTable {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 10px;
+        }
+
+        #searchResultsTable th, #searchResultsTable td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+
+        #searchResultsTable th {
+            background-color: #f2f2f2;
+        }
+
+        .no-label {
+            font-style: italic;
+            color: #999;
+        }
+    </style>
 {% endblock %}
