fix the bug where the schemes without labels are not saved properly

--- a/templates/therapy/scheme/create.html.twig
+++ b/templates/therapy/scheme/create.html.twig
@@ -176,14 +176,12 @@ $(document).ready(function () {
                 initializeSortableForTables();
 
                 {# * Show/hide content #}
-                if (selectedValues.length > 0) {
+                if (selectedValues.length > 0 || getStubsOrder().length != 0) {
                     $("#contentDisplayedWhenLabelsAreSelected").removeClass("d-none");
                     $("#contentDisplayedWhenNoLabelsAreSelected").addClass("d-none");
                 } else {
-                    if(getStubsOrder().length == 0) {    
-                        $("#contentDisplayedWhenLabelsAreSelected").addClass("d-none");
-                        $("#contentDisplayedWhenNoLabelsAreSelected").removeClass("d-none");
-                    }
+                    $("#contentDisplayedWhenLabelsAreSelected").addClass("d-none");
+                    $("#contentDisplayedWhenNoLabelsAreSelected").removeClass("d-none");
                 }
 
         });
